# weather_app

./: .gitignore  README.md  notebook.ipynb  notebook2.ipynb  pyproject.toml  requirements.txt  weather_app_new.py
